<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">HAZM</string>
    <string name="ok">Okay</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="serverFailed">Server Error</string>
    <string name="enter_module_id">Please enter the module ID</string>
    <string name="active">Activate</string>
    <string name="home">HOME</string>
    <string name="info">INFO</string>
    <string name="help">HELP</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="title_location_permission">Location access</string>
    <string name="text_location_permission">Allow access yor location</string>
    <string name="time_attendant">Time Attendance</string>
    <string name="beacon_uuid">954e6dac-5612-4642-b2d1-d253429db36b</string>
    <string name="beacon_major">0</string>
    <string name="beacon_minor">0</string>
    <string name="beacon_uuid_simulator">2f234454-cf6d-4a0f-adf2-f4911ba9ffa6</string>
    <string name="beacon_minor_simulator">12</string>
    <string name="beacon_major_simulator">5</string>
    <string name="beacon_minor_simulator_text">Minor : 12</string>
    <string name="beacon_major_simulator_text">Major : 5</string>
    <string name="uuid_length_wrong">UUID length must be 32</string>
    <string name="uuid_group_wrong">UUID split into 5 groups</string>
    <string name="module_is_out">Module is out of range!</string>
    <string name="turn_on_bluetooth">You must turn on Bluetooth</string>
    <string name="turn_on_location">Please turn on Location</string>
    <string name="allow_notification_permission">You need to allow notification permission to use this app</string>
    <string name="title_location_turn_on">YOU MUST ALLOW PERMANENT ACCESS TO LOCATION</string>
    <string name="title_network_down">NETWORK IS DOWN</string>
    <string name="link_down">LINK DOWN</string>
    <string name="beacon_corrupted">Tag corrupted</string>
    <string name="module_corrupted">Module seems to be corrupted!</string>
    <string name="module_out">Module is out of range!</string>
    <string name="bluetooth_off">Bluetooth is off. You must keep is always on!</string>
    <string name="gps_off">You must grant "Always" access to location service</string>
    <string name="user_name">Username</string>
    <string name="phone">Phone</string>
    <string name="pwd">Password</string>
    <string name="submit">Submit</string>
    <string name="verifying_data">Verifying Data</string>
    <string name="activation_confirmed">Activation Confirmed</string>
    <string name="input_user_name">Input Username</string>
    <string name="wrong_user_name">Username not matched</string>
    <string name="input_phone">Input Phone</string>
    <string name="input_pwd">Input password</string>
    <string name="wait">Please Wait...</string>
    <string name="mqtt_connecting">Connecting to the server</string>
    <string name="mqtt_connect_failed">Mqtt connect failed</string>
    <string name="api_error">API error</string>
    <string name="no_internet">No internet connection found. Please check your internet configuration</string>
    <string name="you_are_outside_your_quarantine_area">You Are Outside Your Quarantine Area</string>
    <string name="activation_failed">Activation Failed</string>
    <string name="please_stay_near_your_phone">Please stay near your phone</string>
    <string name="the_link_with_the_bracelet_is_up">The link with the bracelet is up</string>
</resources>
