<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="30dp"
    android:paddingBottom="10dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/lytWaiting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verifying_data"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                android:layout_marginLeft="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lytSuccess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="invisible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_ok"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activation_confirmed"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                android:layout_marginLeft="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lytWarring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="invisible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_warring"/>

            <TextView
                android:id="@+id/txvMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorRed"
                android:textSize="17sp"
                android:layout_marginLeft="20dp"/>

        </LinearLayout>

    </FrameLayout>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:background="@color/transparent"
        android:textColor="@color/colorRed"/>

</LinearLayout>
